actualizacion de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -40,12 +40,12 @@
                 <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
                 <li><a class="opciones" href="contacto.html">Contacto</a></li>
                 <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
-                <li><a class="opciones" href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1">Para consultas y reservas</a></li>
+                <li><a class="opciones" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
               </ul>
             </div>
       </div>
         <div class="col-md-4 pt-3 text-end">
-          <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="textoCyR">Para consultas y reservas</a>
+          <a href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos" target="_blank" class="textoCyR">Para consultas y reservas</a>
         </div>
         <div class="row col-md-12 text-center"><a href="index.html"><i class="fas fa-home icon10"></i></a>
         </div>
@@ -98,8 +98,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center pt-5">
-              <img src="imagenes/IMG_4003 orginal.png" class="img-responsive" width="8%">
+          <div class="col-md-12 text-center p-5">
+              <img src="imagenes/IMG_4003 orginal.png" class="img-fluid imagenFondo" width="">
           </div>
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
