--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
       </div>
         <div class="col-md-4 pt-3 text-end">
-          <a href="https://api.whatsapp.com/send?phone=+549111161539288&text=Quiero%20consultar%20sobre%20pedidos%20y%20reservas" target="_blank" class="textoCyR">Para consultas y reservas</a>
+          <a href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos" target="_blank" class="textoCyR">Para consultas y reservas</a>
         </div>
     </div>
   </header>
