--- a/quienessomos.html
+++ b/quienessomos.html
@@ -159,7 +159,7 @@
           <div class="col-md-4 fs-2 text-start p-3"><p class="lugar">Quilmes-Buenos Aires</p></div>
                 <div class="col-md-4 fs-2 p-3 text-center">
                   <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
-                  <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
+                  <a href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
                 </div>
                 <div class="col-md-4 text-end p-3"><p class="footer-c">©AdrielAlegre</p></div>
         </div>
