--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h4 class="">Tortas</h4>
               </div>
               <div class="col-md-2"><img src="imagenes/IMG_4126-2.jpg" class="img-fluid" width="">
-                <h4 class="">Ocasiones</h4>
+                <h4 class="textoOpc">Ocasiones</h4>
               </div>
               <div class="col-md-2"><img src="imagenes/IMG_4128-2.jpg" class="img-fluid" width="">
                 <h4 class="">Paletas</h4>
