--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Fredoka+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="css/estilos.css">
     <meta name="description" content="Nuestra pastelería se caracteriza por enfocarnos en los gustos y elecciones de nuestros clientes">
     <meta name="keywords" content="PASTELERIA,PERSONALIZADO,DULCE,TORTAS,MACARONS">
@@ -18,7 +32,7 @@
   <header class="container-fluid">
     <div class="row fondo">
       <div class="col-md-4 pt-3 text-start">
-        <p class="texto">Lucila Gomez Pasteleria</p>
+        <img src="../proyectobootstrap/imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
       </div>
       <div class="col-md-4"> 
             <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
@@ -40,11 +54,11 @@
                 <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
                 <li><a class="opciones" href="contacto.html">Contacto</a></li>
                 <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
-                <li><a class="opciones" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
+                <li><a class="opciones4" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
               </ul>
             </div>
       </div>
-        <div class="col-md-4 pt-3 text-end">
+        <div class="col-md-4 pt-4 text-end">
           <a href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos" target="_blank" class="textoCyR">Para consultas y reservas</a>
         </div>
     </div>
@@ -52,12 +66,12 @@
       <main class="container-fluid">
         <div class="row">
           <div class="col-md-12 text-center pt-5">
-              <img src="imagenes/IMG_4003 orginal.png" class="img-fluid" width="30%">
+              <img src="imagenes/IMG_4003 orginal.png" class="img-fluid" width="35%">
           </div>
         </div>
           <div class="row">
             <div class="col-md-12 text-center pt-5">
-              <p class="textoIndx">Realiza tus pedidos a traves de whatsapp y disfruta el pedido en tu casa</p>
+              <p class="textoIndx">Realiza tus pedidos a traves de whatsapp y disfrutalo en tu casa</p>
             </div>
           </div>
           <div class="container-fluid">
