--- a/contacto.html
+++ b/contacto.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/bbd248f1d8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-<meta name="description" content="Para realizar pedidos,consultas por algun producto en particular no dudes en contactarnos">
-<meta name="keywords" content="CONTACTO,PEDIDOS,CONSULTAS">
-    <title>Contacto</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/bbd248f1d8.js" crossorigin="anonymous"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Fredoka+One&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <meta name="description" content="Para realizar pedidos,consultas por algun producto en particular no dudes en contactarnos">
+  <meta name="keywords" content="CONTACTO,PEDIDOS,CONSULTAS">
+  <title>Contacto</title>
 </head>
 <body>
   <header class="container-fluid">
     <div class="row fondo">
       <div class="col-md-4 pt-3 text-start">
-        <p class="texto">Lucila Gomez Pasteleria</p>
+        <img src="../proyectobootstrap/imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
       </div>
       <div class="col-md-4"> 
             <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
@@ -61,9 +74,9 @@
             <input type="text" class="form-control" placeholder="Email" aria-label="Email">
           </div>
         </div> 
-        <div class="row justify-content-center p-5 mediaMenu d-flex">
+        <div class="row justify-content-center mediaMenu p-5 d-flex">
             <div class="form-floating col-md-4 d-flex">
-                <select class="form-select text-center p-3 colorDeFondo" id="Menu" aria-label="Menu" >
+                <select class="form-select text-center p-3" id="Menu" aria-label="Menu" >
                   <option value="1">Chessecake</option>
                   <option value="2">Chocotorta</option>
                   <option value="3">Mix</option>
