--- a/tortastematicas.html
+++ b/tortastematicas.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bbd248f1d8.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Fredoka+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <meta name="description" content="Destacamos algunos de nuestros productos,si buscas algo más personalizado no dudes en contáctarnos">
     <meta name="keywords" content="CHESSECAKE,PERSONALIZADO,TORTAS,PASTELERIA,BOXS,DESAYUNOS,MERIENDAS">
@@ -15,7 +26,7 @@
     <header class="container-fluid">
         <div class="row fondo">
             <div class="col-md-4 pt-3 text-start">
-                <p class="texto">Lucila Gomez Pasteleria</p>
+                <img src="../proyectobootstrap/imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
             </div>
             <div class="col-md-4"> 
                 <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
