--- a/contacto.html
+++ b/contacto.html
@@ -53,7 +53,7 @@
                 <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
                 <li><a class="opciones" href="contacto.html">Contacto</a></li>
                 <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
-                <li><a class="opciones" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
+                <li><a class="opciones4" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
               </ul>
             </div>
       </div>
