--- a/tortastematicas.html
+++ b/tortastematicas.html
@@ -22,10 +22,10 @@
     <meta name="keywords" content="CHESSECAKE,PERSONALIZADO,TORTAS,PASTELERIA,BOXS,DESAYUNOS,MERIENDAS">
     <title>Tortas Tematicas</title>
 </head>
-<body class="fondo2">
+<body class="fondo6">
     <header class="container-fluid">
         <div class="row fondo">
-            <div class="col-md-4 pt-3 text-start">
+            <div class="col-md-4 pt-2 text-start">
                 <img src="../proyectobootstrap/imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
             </div>
             <div class="col-md-4"> 
@@ -48,7 +48,7 @@
                         <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
                         <li><a class="opciones" href="contacto.html">Contacto</a></li>
                         <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
-                        <li><a class="opciones" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
+                        <li><a class="opciones4" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
                     </ul>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 </li>
             </ul>
         </div>
-        <div class="row pt-3 text-center text-white">
+        <div class="row pt-3 text-center text-dark">
             <h2>Tortas Tematicas</h2>
         </div>
                 <div class="row pt-3">
