--- a/tortabrownie.html
+++ b/tortabrownie.html
@@ -22,7 +22,7 @@
     <meta name="keywords" content="CHESSECAKE,PERSONALIZADO,TORTAS,PASTELERIA,BOXS,DESAYUNOS,MERIENDAS">
     <title>Torta Brownie</title>
 </head>
-<body class="fondo3">
+<body class="fondo6">
     <header class="container-fluid">
         <div class="row fondo">
           <div class="col-md-4 pt-3 text-start">
@@ -48,7 +48,7 @@
                     <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
                     <li><a class="opciones" href="contacto.html">Contacto</a></li>
                     <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
-                    <li><a class="opciones" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
+                    <li><a class="opciones4" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
                   </ul>
                 </div>
           </div>
