--- a/tortas.html
+++ b/tortas.html
@@ -22,11 +22,11 @@
     <meta name="keywords" content="CHESSECAKE,PERSONALIZADO,TORTAS,PASTELERIA,BOXS,DESAYUNOS,MERIENDAS">
     <title>Tortas</title>
 </head>
-<body class="fondo4">
+<body class="fondo6">
     <header class="container-fluid">
         <div class="row fondo">
           <div class="col-md-4 pt-3 text-start">
-            <p class="texto">Lucila Gomez Pasteleria</p>
+            <img src="../proyectobootstrap/imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
           </div>
           <div class="col-md-4"> 
                 <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
@@ -48,7 +48,7 @@
                     <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
                     <li><a class="opciones" href="contacto.html">Contacto</a></li>
                     <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
-                    <li><a class="opciones" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
+                    <li><a class="opciones4" href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos">Para consultas y reservas</a></li>
                   </ul>
                 </div>
           </div>
