--- a/quienessomos.html
+++ b/quienessomos.html
@@ -28,7 +28,7 @@
   <header class="container-fluid">
     <div class="row fondo">
       <div class="col-md-4 pt-3 text-start">
-        <img src="../proyectobootstrap/imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
+        <img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
       </div>
       <div class="col-md-4"> 
             <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
@@ -62,11 +62,10 @@
     </div>
   </header>
       <main class="container-fluid">
-        <section class="row">
-            <article class="col-md-4 text-center pt-4"><img src="imagenes/keepcalm.jpg" class = "img-responsive imagenKeep" width = "55%"></article>
-            <p class="col-md-4 text-center pt-4 textoUbicacion">Somos un emprendimiento dedicado exclusivamente a la pastelria ubicado en la zona sur del Gran Buenos Aires. 
-                Lucila(como indica nuestro nombre) es la que hace posible cada producto,la misma es quien realiza la elaboracion y presentacion final.
-                Cabe aclarar que realizamos un contacto previo con nuestros clientes para saber que es lo que desean ,asi poder trabajar para satisfacer al mismo y que tengan una buena experiencia</p>
+        <article class="row">
+            <section class="col-md-4 text-center pt-4"><img src="imagenes/keepcalm.jpg" class = "img-responsive imagenKeep" width = "55%"></section>
+            <p class="col-md-4 text-start pt-4 textoUbicacion">Somos un emprendimiento dedicado exclusivamente a la pastelria ubicado en la zona sur del Gran Buenos Aires. 
+                Lucila(como indica nuestro nombre) es la que hace posible cada producto,la misma es quien realiza la elaboracion y presentacion final.<br> Cabe aclarar que realizamos un contacto previo con nuestros clientes para saber que es lo que desean ,asi poder trabajar para satisfacer al mismo y que tengan una buena experiencia</p>
                 <div class="col-md-4 text-center">
                   <svg class="illustracion" width="810" height="678" viewBox="0 0 810 678" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="undraw_cookie_love_ulvn 1" filter="url(#filter0_d)">
@@ -160,7 +159,7 @@
                     </defs>
                     </svg>
                 </div> 
-        </section>
+        </article>
         <div class="row">
           <div class="col-md-12 text-center pt-5">
             <p class="textoIndx">Si te gusta algúnos de nuestros estilos o buscas algo un poco más personalizado escribinos a traves de nuestros medios de contacto</p>
