--- a/tortabrownie.html
+++ b/tortabrownie.html
@@ -26,7 +26,7 @@
     <header class="container-fluid">
         <div class="row fondo">
           <div class="col-md-4 pt-3 text-start">
-            <img src="../proyectobootstrap/imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
+            <img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
           </div>
           <div class="col-md-4"> 
                 <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
