actualizacion del proyecto 20-09

--- a/contacto.html
+++ b/contacto.html
@@ -24,14 +24,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <meta name="description" content="Para realizar pedidos,consultas por algun producto en particular no dudes en contactarnos">
-  <meta name="keywords" content="CONTACTO,PEDIDOS,CONSULTAS">
-  <title>Contacto</title>
+  <meta name="keywords" content="contacto,pedidos,consultas">
+  <title>Contacto- Lucila Gomez</title>
 </head>
 <body>
   <header class="container-fluid">
     <div class="row fondo">
       <div class="col-md-4 pt-3 text-start">
-        <img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
+        <a href="index.html"><img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%"></a>
       </div>
       <div class="col-md-4"> 
             <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
@@ -59,13 +59,13 @@
       </div>
         <div class="col-md-4 pt-3 text-end">
           <a href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos" target="_blank" class="textoCyR">Para consultas y reservas</a>
-        </div>
-        <div class="row col-md-12 text-center"><a href="index.html"><i class="fas fa-home icon10"></i></a>
-        </div>
     </div>
   </header>   
     <main>
       <section class="container-fluid">
+        <div class="row col-md-12 text-center p-3">
+          <h1 class="titulos">Contacto</h1>
+        </div>
         <div class="row justify-content-center p-5 flex-column flex-md-row">
           <div class="col-md-2 media">
             <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
