--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <link rel="stylesheet" href="css/estilos.css">
     <meta name="description" content="Nuestra pastelería se caracteriza por enfocarnos en los gustos y elecciones de nuestros clientes">
-    <meta name="keywords" content="PASTELERIA,PERSONALIZADO,DULCE,TORTAS,MACARONS">
-    <title>Lucila Pasteleria</title>
+    <meta name="keywords" content="pastelria,personalizado,dulce,tortas,macarons">
+    <title>Lucila Gomez Pasteleria</title>
 </head>
 <body>
   <header class="container-fluid">
