--- a/quienessomos.html
+++ b/quienessomos.html
@@ -21,14 +21,14 @@
 
     <link rel="stylesheet" href="css/estilos.css">
     <meta name="description" content="Queremos que sepan nuestro origen así también hacer saber que el objetivo esta apuntado a satisfacer a nuestros clientes">
-    <meta name="keywords" content="QUIENES SOMOS,CLIENTES,OBJETIVO,UBICACION">
-    <title>Quienes Somos</title>
+    <meta name="keywords" content="quienes somos,clientes,objetivo,ubicacion">
+    <title>Quienes Somos- Lucila Gomez</title>
 </head>
 <body>
   <header class="container-fluid">
     <div class="row fondo">
       <div class="col-md-4 pt-3 text-start">
-        <img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
+        <a href="index.html"><img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%"></a>
       </div>
       <div class="col-md-4"> 
             <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
@@ -57,12 +57,13 @@
         <div class="col-md-4 pt-3 text-end">
           <a href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos" target="_blank" class="textoCyR">Para consultas y reservas</a>
         </div>
-        <div class="row col-md-12 text-center"><a href="index.html"><i class="fas fa-home icon10"></i></a>
-        </div>
     </div>
   </header>
       <main class="container-fluid">
         <article class="row">
+          <div class="row col-md-12 text-center p-3">
+            <h1 class="titulos">Quienes Somos</h1>
+          </div>
             <section class="col-md-4 text-center pt-4"><img src="imagenes/keepcalm.jpg" class = "img-responsive imagenKeep" width = "55%"></section>
             <p class="col-md-4 text-start pt-4 textoUbicacion">Somos un emprendimiento dedicado exclusivamente a la pastelria ubicado en la zona sur del Gran Buenos Aires. 
                 Lucila(como indica nuestro nombre) es la que hace posible cada producto,la misma es quien realiza la elaboracion y presentacion final.<br> Cabe aclarar que realizamos un contacto previo con nuestros clientes para saber que es lo que desean ,asi poder trabajar para satisfacer al mismo y que tengan una buena experiencia</p>
