--- a/tortabrownie.html
+++ b/tortabrownie.html
@@ -19,14 +19,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <meta name="description" content="Destacamos algunos de nuestros productos,si buscas algo más personalizado no dudes en contáctarnos">
-    <meta name="keywords" content="CHESSECAKE,PERSONALIZADO,TORTAS,PASTELERIA,BOXS,DESAYUNOS,MERIENDAS">
-    <title>Torta Brownie</title>
+    <meta name="keywords" content="chessecake,personalizado,tortas,pastelria,boxs,desayunos,meriendas">
+    <title>Torta Brownie- Lucila Gomez</title>
 </head>
 <body class="fondo6">
     <header class="container-fluid">
         <div class="row fondo">
           <div class="col-md-4 pt-3 text-start">
-            <img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%">
+            <a href="index.html"><img src="imagenes/nombre.png" class="img-fluid nombreLogo" width="25%"></a>
           </div>
           <div class="col-md-4"> 
                 <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
@@ -55,11 +55,12 @@
             <div class="col-md-4 pt-3 text-end">
               <a href="https://api.whatsapp.com/send?phone=+541161539288&text=Hola!%20Quisiera%20consultar%20sobre%20reservas%20y%20pedidos" target="_blank" class="textoCyR">Para consultas y reservas</a>
             </div>
-            <div class="row col-md-12 text-center"><a href="index.html"><i class="fas fa-home icon10"></i></a>
-            </div>
         </div>
       </header>
     <main class="container-fluid">
+      <div class="row col-md-12 text-center p-3">
+        <h1 class="titulos">Nuestros Productos</h1>
+      </div> 
         <div class="row pt-3">
             <h2>Categorías</h2>
         </div>
